--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -1,9 +1,31 @@
-<ul>
-	<li ng-repeat="phone in $ctrl.phones"> 
-		<span>{{phone.name}}</span> 
-		<p> 
-		{{phone.snippet}} 
-		</p> 
-	</li> 
-	<p>Total number of phones: {{$ctrl.phones.length}}</p>  
-</ul>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-2">
+			<!--Sidebar content-->
+			<p>
+				Search: 
+				<input ng-model="$ctrl.query">
+			</p>
+
+			<p>
+				Sort by:
+				<select ng-model="$ctrl.orderProp">
+					<option value="name">Aplhabetical</option>
+					<option value="age">Newest</option>
+				</select>
+			</p>
+
+		</div>
+		<div class="col-md-10">
+
+			<ul class="phones">
+				<li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp"> 
+					<span>{{phone.name}}</span> 
+					<p>{{phone.snippet}}</p> 
+				</li> 
+				<p>Total number of phones: {{($ctrl.phones | filter:$ctrl.query).length}}</p>  
+			</ul>
+
+		</div>
+	</div>
+</div>
