Step 9 tuto: Routing and multiple views

--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,24 @@
 <head>
 	<meta charset="utf-8">
 	<title>Google Phone Gallery</title>
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<!--	
+	<link rel="stylesheet" href="app.css">
+	-->
+
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
 	<script src="app.module.js"></script>
+	<script src="app.config.js"></script>
 	<script src="phone-list/phone-list.module.js"></script>
 	<script src="phone-list/phone-list.component.js"></script>
+	<script src="phone-detail/phone-detail.module.js"></script>
+    <script src="phone-detail/phone-detail.component.js"></script>
 </head>
 <body>
-	<phone-List></phone-List>
+
+	<div ng-view></div>
+
 </body>
 </html>
